# folding

./: .gitignore  COMPILE  ChangeLog  IDEAS  Makefile.am  TODO  bootstrap  configure.ac  folding.files  folding.includes
doc/: Makefile.am  appendices.tex  appendix-api.tex  appendix-tool-design.tex  get-a-trace.tex  quick-guide-section.tex  user-guide-doc.tex  user-guide-get-a-trace.tex  user-guide.ps  user-guide.tex  version.tex
doc/XML/: extrae-counters-basic.tex  extrae-counters-ibm-power5.tex  extrae-counters-ibm-power7.tex  extrae-counters-ibm-power8.tex  extrae-counters-intel-haswell.tex  extrae-counters-intel-nehalem.tex  extrae-counters-intel-sandybridge.tex  extrae-enable-sampling-callers.tex  extrae-enable-sampling.tex  folding-model-example.tex
doc/figures/user-guide/: 444.namd.ratio_per_instruction.tex  444.namd.tot_ins.paraver.tex  444.namd.tot_ins.tex  codeblocks-fuse-extract.tex  nemo.cluster1.callers.paraver.tex  nemo.cluster1.instructionmix.tex  tool-design-interpolate-callstack-processor.tex  tool-design-interpolate-instance-separator.tex  tool-design-interpolate-instances.tex  tool-design-interpolate-interpolation.tex  tool-design-interpolate-model.tex  tool-design-interpolate-sample-selector.tex
doc/listings/user-guide/: folding-writer-out.tex  folding-writer.tex  folding-writer.tex.aux
doc/tables/user-guide/: folding-contents-package.tex
doc/user-guide/: WARNINGS  images.aux  images.pl  images.tex  index.bsc.html  index.html  internals.pl  labels.pl  user-guide.css  user-guide.html
folding/: Makefile  Makefile.am  README  TODO  callstackanalysis.C  callstackanalysis.H  common.C  common.H  common.h  configure.ac  extract.C  extract.cpp  fuse.C  fuse.cpp  generate-gnuplot.C  generate-gnuplot.H  generate-gnuplot.cpp  generate-gnuplot.h  interpolate.C  interpolate.cpp  max-diff-interpolation-points.c  mean-diff-interpolation-points.c  point.H  region-analyzer-first-occurrency.C  region-analyzer-first-occurrency.H  region-analyzer-in-frame-region.C  region-analyzer-in-frame-region.H  region-analyzer-in-time-region.C  region-analyzer-in-time-region.H  region-analyzer.C  region-analyzer.H  region-analyzer.cpp  region-analyzer.h  region-info.C  region-info.H  region.C  region.H  region.cpp  region.h  sort_pcf.C  (+5 more)
folding/examples/: README  RUNME
folding/examples/clusters/: cgpop.task1.clustered.pcf  cgpop.task1.clustered.row
folding/examples/user-functions/: 444.namd.2400000.pcf  444.namd.2400000.row
folding/others/: basicblocks.C.py  basicblocks.F90.py  breakpoints.R  fold.sh  folding-cube-call-paraver.sh
folding/service-kriger/: Makefile  call_Kriger.f90  def_kinrea.f90  kri_covarm.f90  kri_interp.f90  kri_memall.f90  kriger_wrapper.c  kriger_wrapper.h  test.c
folding/service-kriger/CVS/: Entries  Repository  Root
folding/src/: CubeLaunchFile.C  CubeLaunchFile.H  Makefile.am  callstackanalysis.C  callstackanalysis.H  common.C  common.H  execute-R.C  extract.C  generate-gnuplot.C  interpolate.C  mean-diff-interpolation-points.c  region-analyzer-first-occurrency.C  region-analyzer-in-time-region.C  region-info.C  region.C  sort_pcf.C  translate_prv.C  treenodeholder.C  treenodeholder.H
folding/src/service-kriger/: Makefile  Makefile.am  kri_indata.f90
src/: CubeLaunchFile.C  Makefile.am  callstack-tree.C  callstack-tree.H  callstack.C  callstack.H  callstackanalysis.C  callstackanalysis.H  codeblocks.C  codereftriplet-accounting.C  codereftriplet-accounting.H  codereftriplet.C  codereftriplet.H  common.C  common.H  cube-holder.C  cube-holder.H  cube-tree.C  cube-tree.H  execute-R.H  execute-breakpoints-R.C  execute-breakpoints-R.H  extract.C  folding-types.C  fuse.C  generate-gnuplot.H  instance-container.C  instance-container.H  instance-group.C  instance-group.H  instance-separator-auto.C  instance-separator-auto.H  instance-separator-dbscan.C  instance-separator-dbscan.H  instance-separator-none.C  instance-separator-none.H  instance-separator.C  instance-separator.H  instance.C  instance.H  (+34 more)
src/codeblocks/: Makefile.am  codeblocks.C
src/common/: Makefile.am  callstack-codereftriplet.C  callstack-codereftriplet.H  codereftriplet.C  codereftriplet.H  common-math.C  common-math.H  common.C  common.H  data-object.C  data-object.H  object-selection.C  object-selection.H  pcf-common.C  pcf-common.H  prv-colors.C  prv-colors.H  prv-types.H  sample.C  sample.H  variable-info.C  variable-info.H
src/extract/: Makefile.am  extract.C  prv-semantic-CSV.C  prv-semantic-CSV.H  prv-semantic.H
src/fuse/: Makefile.am  fuse.C
src/gui/: Makefile.am
src/gui/cube-plugins/: Makefile.am  README
src/interpolate/: Makefile.am  callstack-tree.C  callstack-tree.H  callstack.C  callstack.H  codereftriplet-accounting.C  codereftriplet-accounting.H  cube-holder.C  cube-holder.H  cube-tree.C  cube-tree.H  generate-gnuplot.C  generate-gnuplot.H  instance-container.C  instance-container.H  instance-group.C  instance-group.H  instance-separator-auto.C  instance-separator-auto.H  instance-separator-dbscan.C  instance-separator-dbscan.H  instance-separator-none.C  instance-separator-none.H  instance-separator.C  instance-separator.H  instance.C  instance.H  interpolate.C  interpolate.H  interpolation-R-strucchange.C  interpolation-R-strucchange.H  interpolation-kriger.C  interpolation-kriger.H  interpolation-results.C  interpolation-results.H  interpolation.C  interpolation.H  prv-writer.C  prv-writer.H  sample-selector-default.C  (+8 more)
src/io/: Makefile.am  extracted-sample.C  extracted-sample.H  folding-reader.C  folding-reader.H  folding-writer.C  folding-writer.H  sample.C
src/model/: componentmodel.C  componentmodel.H  componentnode.H  componentnode_constant.C  componentnode_constant.H  componentnode_data.C  componentnode_data.H  componentnode_derived.C  componentnode_derived.H  model.C  model.H
src/others/: Makefile.am  folding-types.C  max-diff-interpolation-points.c  mean-diff-interpolation-points.c
src/service-R/: Makefile.am  execute-R.C  execute-R.H
src/service-kriger/: Makefile.am  call_Kriger.f90  def_kriger.f90  kri_oudata.f90  test.c
(+237 files in other folders)
